fixed spacing

--- a/styles/style.css
+++ b/styles/style.css
@@ -155,6 +155,10 @@ img {
     font-weight: 700;
 }
 
+#displayProduct {
+    margin-top: 10px;
+}
+
 
 /* Footer styles */
 
